Added book with guest or book with user.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -8,6 +8,7 @@ booking bundle
   - cancel minutes before, int
   - cancel minutes after created, int
   - can only book in future
+  - cannot book with yourself
 make some more tests
 coupon option to go below zero
 
