--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -20,6 +20,7 @@ implement payment for booking
 show time and location information on book page
 make some more tests
 coupon option to go below zero
+rename terms to information
 
 == TEAM PARAMETERS ==
 cannot cancel team within start date
