Obey cancel booking rules.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,7 +1,10 @@
 == TODO ==
 booking bundle
   - cannot cancel team within start date
-  - cannot cancel others booking except ROLE
+  obey:
+    cancel_minute_before: 120
+    cancel_minute_created: 5
+
 better pick opponent form
 add booking plans
   - maintenance
