--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -9,16 +9,16 @@ implement payment for booking
 make some more tests
 change time and location for booking
 make field administration
-
-make more simple demo location setup
-change time comparence to object compare instead of timestamp
 fix expire date of coupon
 fix max usage of coupon
 cannot add more coupons to cart on + sign
 bind coupon to specific product
-
-== TEAM PARAMETERS ==
 cannot cancel team within start date
 max attends
 max attends / day
-be able to delete booking within 5 minutes after created
+be able to delete attends within 5 minutes after created
+
+== NOTES TO LATER ==
+make more simple demo location setup
+change time comparence to object compare instead of timestamp
+
