--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -17,6 +17,8 @@ cannot cancel team within start date
 max attends
 max attends / day
 be able to delete attends within 5 minutes after created
+team should be able to use fields
+make ajax fields for fields on schedule
 
 == NOTES TO LATER ==
 make more simple demo location setup
