--- a/README
+++ b/README
@@ -50,7 +50,7 @@ If you dont have access to the shell, then you have to do then manual installati
 Get the archive
 ---------------
 
-First get the archive from our website http://www.clubmaster.dk.
+First get the archive from our website http://www.clubmaster.org.
 
 Now extract the archive some place that your webserver can see.
 
