--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -7,18 +7,16 @@ add booking plans
 implement payment for booking
 make some more tests
 make field administration
-fix max usage of coupon
-cannot add more coupons to cart on + sign
-bind coupon to specific product
-fix coupon no orders can go below zero
 cannot cancel team within start date
 user constraints max attends
 user constraints max attends / day
 be able to delete attends within 5 minutes after created
 make ajax fields for fields on schedule to prevent showing all fields
 not 2 schedules can have the same interval
+fix coupon no orders can go below zero
 
 == NOTES TO LATER ==
 make more simple demo location setup
 change time comparence to object compare instead of timestamp
-
+use validators in coupon
+bind coupon to specific product
