--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -7,6 +7,7 @@ add booking plans
 implement payment for booking
 make some more tests
 make field administration
+make attend created time
 cannot cancel team within start date
 user constraints max attends
 user constraints max attends / day
