--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == TODO ==
+remove cart if user shop login and already has a cart
 cannot change quantity on order preview
 remove new member, add to checkout of shop
 better booking schema:
