--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == TODO ==
+make login button in the top, instead of the button
 better booking schema:
   - improve colors
 better pick opponent form
