Added admin interval.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == TODO ==
+better logo for adminfield interval
 make login button in the top, instead of the button
 better booking schema:
   - improve colors
