--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,10 +1,10 @@
 == TODO ==
+test coupon key
 make login form visible in the left when not logged in
 better booking schema:
   - improve colors
 better pick opponent form
 not 2 schedules can have the same interval
-fix coupon no orders can go below zero
 move all login pages to /user
 
 == NOTES TO LATER ==
