--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == TODO ==
+make test, cancel order
 make login form visible in the left when not logged in
 better booking schema:
   - improve colors
