--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -26,3 +26,4 @@ login through team attend page
 login through booking page
 move all login pages to /user
 not 2 schedules can have the same interval
+what will happen if interval access multiple days
