--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -24,3 +24,4 @@ login through team attend page
 move all login pages to /user
 not 2 schedules can have the same interval
 what will happen if interval access multiple days
+dynamic number of partners for a booking
