Added more details to booking API.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -26,3 +26,4 @@ what will happen if interval access multiple days
 dynamic number of partners for a booking
 booking module should work without partners too
 jquery overlay form on booking
+add display username
