--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,7 @@ login through booking page
 scroll right and left on booking page
 jquery autocomplete partner form
 support for both bookings and schedules on booking schema
+improve text and design on delete booking page
 
 == NOTES TO LATER ==
 implement payment for booking
