--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,21 +1,17 @@
-users and admin should be able to delete booking
+improve text and design on delete booking page
+jquery autocomplete partner form
+support for both bookings and schedules on booking schema
+jquery overlay form on booking
 login through booking page
 scroll right and left on booking page
-add booking confirmation
-better booking schema:
-  - add tooltips
-jquery autocomplete partner form
-jquery overlay form on booking
-support for both bookings and schedules on booking schema
 
 == NOTES TO LATER ==
 implement payment for booking
-make more simple demo location setup
 change time comparence to object compare instead of timestamp
 use validators in coupon
 bind coupon to specific product
 fix num_team_day
-fint a smart way to get default location, might be with the url
+find a smart way to get default location, might be with the url
 add booking plans
   - maintenance
   - cleaning
@@ -26,3 +22,4 @@ not 2 schedules can have the same interval
 what will happen if interval access multiple days
 dynamic number of partners for a booking
 booking module should work without partners too
+add display username
