--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -23,3 +23,4 @@ what will happen if interval access multiple days
 dynamic number of partners for a booking
 booking module should work without partners too
 add display username
+add address on club to api
