Added jquery autocomplete support.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,6 @@
 give better debug information on team attend error
 add if user is attending team on /api/users/teams
-jquery autocomplete partner form
+add name for instructor on /api/teams/
 support for both bookings and schedules on booking schema
 jquery overlay form on booking
 login through booking page
