--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,6 +3,7 @@ add if user is attending team on /api/users/teams
 add name for instructor on /api/teams/
 support for both bookings and schedules on booking schema
 scroll right and left on booking page
+improve icon set
 
 == NOTES TO LATER ==
 login through booking page
