--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,6 +2,7 @@ give better debug information on team attend error
 add if user is attending team on /api/users/teams
 add name for instructor on /api/teams/
 support for both bookings and schedules on booking schema
+make a tool that dynamic can create fields
 
 == NOTES TO LATER ==
 login through booking page
