--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -26,3 +26,4 @@ add address on club to api
 remove API KEY from BookingBundle/Resources/views/Overview/view.html.twig
 much better debugging on errors from API.. make sure all errors is wrapped in encode->encodeError()
 what happens if you put schema on already booked interval
+booking admins should be able to deleted planned schedules too
