--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,7 @@
 make sure you cannot book when a schedule exists on an interval
 make a tool that dynamic can create fields
 better print of coming days
+translation of booking bundle
 
 == NOTES TO LATER ==
 login through booking page
