--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -27,3 +27,7 @@ remove API KEY from BookingBundle/Resources/views/Overview/view.html.twig
 much better debugging on errors from API.. make sure all errors is wrapped in encode->encodeError()
 what happens if you put schema on already booked interval
 booking admins should be able to deleted planned schedules too
+make sure widgets works:
+  - datetime
+  - date
+  - time
