--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 translation of booking bundle
+add tiny mce in editor windows
 
 == NOTES TO LATER ==
 make sure that not 2 intervals can be valid at the same time
