--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,5 @@
-translation of booking bundle
 add tiny mce in editor windows
+seems like we can reset password as a mistake
 
 == NOTES TO LATER ==
 make sure that not 2 intervals can be valid at the same time
