--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,3 +1,6 @@
+== BOOKING BUNDLE ==
+dont bind bookings to interval, make them as schedules
+
 == NOTES TO LATER ==
 add display username
 change password
@@ -29,3 +32,6 @@ booking module should work without partners too
 much better debugging on errors from API.. make sure all errors is wrapped in encode->encodeError()
 what happens if you put schema on already booked interval
 booking admins should be able to deleted planned schedules too
+something is broken when creating more intervals on the same field, fix it
+on admin interval manager, put a default interval in top, that will set the same for everyone
+when field created, forward to create interval page
