--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,11 +1,17 @@
 == BOOKING BUNDLE ==
+enable and disable teams
+enable and disable bookings
+enable and disable events
 dont bind bookings to interval, make them as schedules
-
-== NOTES TO LATER ==
-add display username
+make it more clear which location we are on, booking page
+on visit shop with no categories, view shops with products
+on visit to booking with no fields, view locations with fields
 change password
 rewrite date formatter object to intl extension
 add news blog on welcome page
+
+== NOTES TO LATER ==
+add display username
 make sure widgets works:
   - datetime
   - date
@@ -35,3 +41,4 @@ booking admins should be able to deleted planned schedules too
 something is broken when creating more intervals on the same field, fix it
 on admin interval manager, put a default interval in top, that will set the same for everyone
 when field created, forward to create interval page
+on switch location, stay on last visited page
