Rename start_date and stop_date to first_date and end_date.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,5 +1,6 @@
 == BOOKING BUNDLE ==
-check up on bookings
+cannot view booked booking
+cannot view schedule
 
 == NOTES TO LATER ==
 change all equal form.html.twig to layout default
