--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,5 @@
 == NOTES TO LATER ==
+when setting language in installer, it does not follow the user
 change all equal form.html.twig to layout default
 enable and disable teams
 enable and disable bookings
