Translated book days to international.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,13 +1,11 @@
 == NOTES FOR THIS RELEASE ==
 when user login, language does not change
 create initial welcome blog
-user dashboard, cannot edit orders
-translate installer to danish
-translate weekdays on booking page
 when setting language in installer, it does not follow the user
 event admin, tinymce
 
 == NOTES TO LATER ==
+find a better way with installer, the file is pretty old school
 rewrite shop attributes, dont have them in database
 open and close booking on specific dates for fields
 remove clubmaster from product attribute
