--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,6 +1,7 @@
 == NOTES FOR THIS RELEASE ==
 when user login, language does not change
 create initial welcome blog
+make sure the times are right according to database, check events for instance
 
 == NOTES TO LATER ==
 find a better way with installer, the file is pretty old school
