Fixed delete booking.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,7 @@
 == NOTES FOR THIS RELEASE ==
+dont show forms to users that cannot book
+should not be possible to book without membership
+improve design on checkout anonymous
 create initial welcome blog
 make sure the times are right according to database, check events for instance
 
